添加下载PDF功能，修改product下的产地属性，改为只有国产和进口两个枚举

--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -1,6 +1,6 @@
 	<div class="header">
 		<div class="head-box clearfix">
-			<a href="/" class="logo"><img th:src="@{/img/topic1.jpg}" alt="logo" width="165" height="80"/></a>
+			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-search">
 				<span class="searched">商品</span>
 				<input type="text"/>
