--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -39,10 +39,10 @@
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="#" class="logo"><img src="img/topic1.jpg" alt="logo" width="165" height="80"/></a>
-			<div class="head-menu-btn">
+			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+			<div class="head-menu-btn resg-self">
 				<a class="self-btn"></a>
-				<a class="company-btn" href="/signup?provider"></a>
+				<a class="company-btn"></a>
 			</div>
 			<div class="head-menu">
 				<a href="/login">已有账号？马上登录</a>
