--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -117,9 +117,9 @@
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="#" class="logo"><img src="img/topic1.jpg" alt="logo" width="150" height="40"/></a>
-			<div class="head-menu-btn">
-				<a class="self-btn" href="/signup?user"></a>
+			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+			<div class="head-menu-btn resg-company">
+				<a class="self-btn"></a>
 				<a class="company-btn"></a>
 			</div>
 			<div class="head-menu">
