--- a/admin/src/main/resources/templates/scroll/list.html
+++ b/admin/src/main/resources/templates/scroll/list.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="_csrf" th:content="${_csrf.token}" />
-		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 		<title>jQuery File Upload Example</title>
 		<script src="/js/jquery-1.11.2.min.js"></script>
 		<script src="/js/vendor/jquery.ui.widget.js"></script>
@@ -68,7 +66,7 @@
 	<body>
 		<div th:each="i:${lists}">
 			<input type="text" id="url" th:value="${i.href}"/>
-			<input type="file" name="file" th:attr="data-url=@{/admin/scrollImages/__${#strings.toLowerCase(i.scrollType)}__/__${i.id}__},data-sort=${i.sortNumber}"/>
+			<input type="file" name="file" th:attr="data-url=@{/admin/scrollImages/index/__${i.id}__},data-sort=${i.sortNumber}"/>
 			<img th:src="${i.imageUrl}" style="height:100px;width:200px">
 			</img>
 			<div id="progress">
