--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -52,7 +52,11 @@ input{
 .hide{
 	display: none;
 }
-.btn.orange,.btn.green{	
+a.btn{
+	display: inline-block;
+	font-size: 14px;
+}
+.btn.orange,.btn.green,.btn.default{	
 	width: 120px;
 	line-height: 25px;
 }
@@ -61,6 +65,9 @@ input{
 }
 .btn.green{
 	background: #43b628;
+}
+.btn.default{
+	background: #eee;
 }
 .center{
 	text-align: center;
@@ -153,13 +160,13 @@ table{
 	margin:0 auto 20px;
 }
 .head-box{
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 }
 .head-box a.logo{
 	float: left;
 	width: 165px;
-	height: 80px;
-	border: 1px solid #ffbe26;
+	height: 30px;
+	margin-top: 20px;
 }
 .head-box .head-search{
 	float: left;
@@ -596,21 +603,27 @@ table{
 }
 .resg-header .head-box a.logo{
 	margin-right: 20px;
+	margin-top: 25px;
 }
 .resg-header .head-menu-btn{
 	float: left;
 	margin-top: 20px;
 }
-.resg-header .head-menu-btn a,
-.resg-hd span{
+.resg-header .head-menu-btn a{
 	display: inline-block;
 	width: 72px;
-	height: 45px;
+	height: 45px;	
+}
+.resg-header .resg-self a,
+.resg-hd span{
 	background: url('../img/icon-resg.png') no-repeat;
 }
-.resg-header .head-menu-btn a.company-btn{
-	background-position: -80px 0;
-	margin-left: 8px;
+.resg-header .resg-company a{
+	background: url('../img/icon-resg2.png') no-repeat;
+}
+.resg-header .resg-self a.company-btn,
+.resg-header .resg-company a.self-btn{
+	background-position: -79px 0;
 }
 .resg-header .head-menu{
 	margin-top: 30px;
@@ -642,6 +655,7 @@ table{
 	margin-right: 20px;
 	font-size: 14px;
 	text-align: right;
+	color: #686f83
 }
 .form-group input[type=text],
 .form-group input[type=password]{
@@ -883,9 +897,6 @@ table.save-table span.one-sort{
 }
 .mainpanel .all span{
 	margin-left: 10px;
-}
-.mainpanel table{
-	width:100%;
 }
 .mainpanel table td div.fl{
 	width: 250px;
@@ -1549,29 +1560,36 @@ li div.topic-detail{
 .hide-wrap.orders label{
 	width: 58px;
 }
+.pdf{
+	margin:20px;
+	width:760px;
+}
 .hide-wrap.orders input,
 .pdf .form-group input[type=text]{
 	width: 150px;
 }
 .pdf .form-group label{
-	width: 57px;
+	width: 95px;
 }
 .pdf .form-group label.w95{
 	width: 95px;
 }
 .hide-wrap.orders input.w635,
-.pdf .form-group input.w635,
 textarea.w635{
 	width: 635px;
 }
+.pdf .form-group input.w635,
+textarea.w635{
+	width: 600px;
+}
 .self-wrap .gray-hd.winh{
-	width: inherit;
+	width: 87.3%;
 }
 .block{
 	display: block;
 }
-。ml5{
-	margin-left：5px;
+.ml5{
+	margin-left:5px;
 }
 .hide-wrap textarea.w635{
 	vertical-align: top;
@@ -1596,6 +1614,10 @@ textarea.w635{
 	right: 15px;
 	top:15px;
 	cursor: pointer;
+}
+.hide-wrap.logo-wrap{
+	height: 140px;
+	padding-top: 10px;
 }
 .cart-con a.add-cart{
 	width: 130px;
