--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -50,7 +50,7 @@
 					<a class="active">采购申请</a>
 				</div>
 				<div class="mainpanel purchase fr">
-					<table class="change-color">
+					<table class="change-color" style="width: 100%;">
 						<thead>
 							<tr>
 								<th>编号</th>
