--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -37,7 +37,7 @@
 					<a href="/user/buyRecords">采购申请</a>
 				</div>
 				<div class="mainpanel fr">
-					<div class="all ft14">全部商品<span th:text="${list.size()}"></span></div>
+					<div class="all ft14">全部商品<span th:if="${list==null}"></span><span th:unless="${list==null}" th:text="${list.size()}"></span></div>
 					<div class="cart-table change-color">
 						<table cellpadding="0" cellspacing="0">
 							<thead>
@@ -70,9 +70,7 @@
 											</div>
 											<div>
 												<label>产地：</label>
-												<span th:if="${cart.place.toString() == 'DOMESTIC'}">国内</span>
-												<span th:if="${cart.place.toString() == 'EUROPEANDUS'}">欧美</span>
-												<span th:if="${cart.place.toString() == 'OTHER'}">其他</span>
+												<span th:text="${cart.place.toString()}"></span>
 											</div>
 											<div>
 												<label>型号：</label>
