--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="#" class="logo"><img src="img/topic1.jpg" alt="logo" width="165" height="80"/></a>
+			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-menu-btn logo-menu">
 				<a class="self-btn" href="/signup?user"></a>
 				<a class="company-btn" href="/signup?provider"></a>
@@ -54,11 +54,11 @@
 			<form th:method="post" th:object="${user}">
 				<div class="form-group">
 					<label>用户名</label>
-					<input th:field="*{name}" type="text" placeholder="邮箱/电话/用户名"/>
+					<input th:field="*{name}" type="text" placeholder="用户名"/>
 				</div>
 				<div class="form-group" style="width: 380px;">
 					<label>密码</label>
-					<input th:field="*{password}" type="password"/>
+					<input th:field="*{password}" type="password" placeholder="密码"/>
 					<i class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></i>			
 				</div>
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
