--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -166,14 +166,12 @@
 									th:errors="*{brand}"></i>
 							</div>
 							<div class="fl">
-								<label><i>*</i>产地</label> <select class="w235"
-									th:field="*{placeOfProduction}">
+								<label><i>*</i>产地</label> <select class="w235" th:field="*{placeOfProduction}">
 									<option value="">请选择</option>
-									<option th:value="DOMESTIC">国内</option>
-									<option th:value="EUROPEANDUS">欧美</option>
-									<option th:value="OTHER">其他</option>
-								</select> <i class="error"
-									th:if="${#fields.hasErrors('placeOfProduction')}"
+									<option th:value="国产">国产</option>
+									<option th:value="进口"></option>
+								</select> 
+									<i class="error" th:if="${#fields.hasErrors('placeOfProduction')}"
 									th:errors="*{placeOfProduction}"></i>
 							</div>
 						</div>
