change from four type to only one product module

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -64,16 +64,7 @@
                         <a ui-sref="brand">商品分类管理</a>
                     </li>
                     <li>
-                        <a ui-sref="consumable">consumable</a>
-                    </li>
-                    <li>
-                        <a ui-sref="instrument">instrument</a>
-                    </li>
-                    <li>
-                        <a ui-sref="reagents">reagents</a>
-                    </li>
-                    <li>
-                        <a ui-sref="servcie">servcie</a>
+                        <a ui-sref="products">products</a>
                     </li>
                     <li>
                         <a ui-sref="advertise">广告发布</a>
