--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -5,82 +5,86 @@
 		</button>
 		<div class="modal-body pl100">
 			<form class="form-horizontal">
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 序号 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-					<label class="control-label col-sm-2"> 提交日期 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 产品类型 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-					<label class="control-label col-sm-2"> 状态 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 一级分类 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-					<label class="control-label col-sm-2"> 上架日期 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 二级分类 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 名称 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 价格 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 型号 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 产地 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 规格 </label>
-					<div class="col-sm-4">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 标签 </label>
-					<div class="col-sm-8">
-						<input class="form-control" disabled="true" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2"> 商品详情 </label>
-					<div class="col-sm-10">
-						<textarea rows="5" class="col-sm-10" disabled="true"></textarea>
+				<div class="row">
+					<div class="col-sm-5">
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 序号 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+							<label class="control-label col-sm-2"> 提交日期 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 产品类型 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+							<label class="control-label col-sm-2"> 状态 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 一级分类 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+							<label class="control-label col-sm-2"> 上架日期 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 二级分类 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 名称 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 价格 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 型号 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 产地 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 规格 </label>
+							<div class="col-sm-4">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 标签 </label>
+							<div class="col-sm-8">
+								<input class="form-control" disabled="true" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2"> 商品详情 </label>
+							<div class="col-sm-10">
+								<textarea rows="5" class="col-sm-10" disabled></textarea>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="panel-footer mauto">
