--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -69,12 +69,12 @@
 											<div class="fl">
 											<label>企业性质</label>
 											<select class="w228" th:field="*{componyType}">
-												<option value="外商独资">外商独资</option>
-												<option value="合资企业">合资企业</option>
-												<option value="民营企业">民营企业</option>
-												<option value="国有企业">国有企业</option>
-												<option value="高等院校">高等院校</option>
-												<option value="刑侦机关">刑侦机关</option>
+												<option value="ONE">外商独资</option>
+												<option value="TWO">合资企业</option>
+												<option value="THREE">民营企业</option>
+												<option value="FOUR">国有企业</option>
+												<option value="FIVE">高等院校</option>
+												<option value="SIX">刑侦机关</option>
 											</select>
 											<i class="error ml143" th:if="${#fields.hasErrors('componyType')}" th:errors="*{componyType}"></i>
 											</div>
@@ -106,11 +106,11 @@
 											<div class="fl">
 											<label><i>*</i>业务类型</label>
 											<select class="w228" th:field="*{businessType}">
-												<option value="生产型">生产型</option>
-												<option value="贸易型">贸易型</option>
-												<option value="服务型">服务型</option>
-												<option value="政府机关">政府机关</option>
-												<option value="其他">其他</option>
+												<option value="ONE">生产型</option>
+												<option value="TWO">贸易型</option>
+												<option value="THREE">服务型</option>
+												<option value="FOUR">政府机关</option>
+												<option value="FIVE">其他</option>
 											</select>
 											<i class="error ml143" th:if="${#fields.hasErrors('businessType')}" th:errors="*{businessType}"></i>
 											</div>
@@ -119,10 +119,10 @@
 											<div class="fl">
 											<label><i>*</i>企业规模</label>
 											<select class="w228" th:field="*{scale}">
-												<option value="五十人以下">五十人以下</option>
-												<option value="五十到一百人">五十到一百人</option>
-												<option value="一百到五百">一百到五百</option>
-												<option value="超过五百">超过五百</option>
+												<option value="ONE">五十人以下</option>
+												<option value="TWO">五十到一百人</option>
+												<option value="THREE">一百到五百</option>
+												<option value="FOUR">超过五百</option>
 											</select>
 											<i class="error ml143" th:if="${#fields.hasErrors('scale')}" th:errors="*{scale}"></i>
 											</div>
@@ -131,12 +131,12 @@
 											<div class="fl">
 											<label><i>*</i>年产值</label>
 											<select class="w228" th:field="*{output}">
-												<option value="五百万以下">五百万以下</option>
-												<option value="五百万至两千万">五百万至两千万</option>
-												<option value="两千万至五千万">两千万至五千万</option>
-												<option value="五千万至一亿">五千万至一亿</option>
-												<option value="一亿至五亿">一亿至五亿</option>
-												<option value="五亿以上">五亿以上</option>
+												<option value="ONE">五百万以下</option>
+												<option value="TWO">五百万至两千万</option>
+												<option value="THREE">两千万至五千万</option>
+												<option value="FOUR">五千万至一亿</option>
+												<option value="FIVE">一亿至五亿</option>
+												<option value="SIX">五亿以上</option>
 											</select>
 											<i class="error ml143" th:if="${#fields.hasErrors('output')}" th:errors="*{output}"></i>
 											</div>
