--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -44,7 +44,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in items">
-                <td>{{$index+1}}</td>
+                <td ng-click="view(item)">{{$index+1}}</td>
                 <td>{{item.firstCategoryName}}</td>
                 <td>{{item.secondCategoryName}}</td>
                 <td>{{item.name}}</td>
