product&solution relationship feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
     <script src="/js/module/subject.js"></script>
     <script src="/js/module/product.js"></script>
     <script src="/js/module/productCategory.js"></script>
+    <script src="/js/module/solution.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
